- Added initial version of transactions microservice. - Improved controllers. - Removed logs and unnecessary exception checks. - Added Feign client in accounts microservice for communication with transactions microservice. - Improved Redis rate limiter. - Added tests for accounts and transactions microservices.