@@ -15,17 +15,24 @@ public class KeycloakRoleConverter implements Converter<Jwt, Collection<GrantedA
     @Override
     @SuppressWarnings("unchecked")
     public Collection<GrantedAuthority> convert(Jwt jwt) {
+        Collection<GrantedAuthority> authorities = new ArrayList<>();
         Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().get("realm_access");
-
-        if (realmAccess == null || realmAccess.isEmpty()) {
-            return new ArrayList<>();
+        if (realmAccess != null && !realmAccess.isEmpty()) {
+            List<String> realmRoles = (List<String>) realmAccess.get("roles");
+            authorities.addAll(realmRoles.stream()
+                    .map(roleName -> "ROLE_" + roleName)
+                    .map(SimpleGrantedAuthority::new)
+                    .toList());
         }
-
-        Collection<GrantedAuthority> returnValue = ((List<String>) realmAccess.get("roles"))
-                .stream()
-                .map(roleName -> "ROLE_" + roleName)
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
-        return returnValue;
+        Map<String, Object> resourceAccess = (Map<String, Object>) jwt.getClaims().get("resource_access");
+        if (resourceAccess != null && resourceAccess.containsKey("my-budget-ac")) {
+            Map<String, Object> clientAccess = (Map<String, Object>) resourceAccess.get("my-budget-ac");
+            List<String> clientRoles = (List<String>) clientAccess.get("roles");
+            authorities.addAll(clientRoles.stream()
+                    .map(roleName -> "ROLE_" + roleName)
+                    .map(SimpleGrantedAuthority::new)
+                    .toList());
+        }
+        return authorities;
     }
 }
