@@ -11,18 +11,28 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
-public class KeycloakRoleConverter  implements Converter<Jwt, Collection<GrantedAuthority>> {
-
-    @SuppressWarnings("unchecked")
+public class KeycloakRoleConverter implements Converter<Jwt, Collection<GrantedAuthority>> {
     @Override
-    public Collection<GrantedAuthority> convert(Jwt source) {
-        Map<String, Object> realmAccess = (Map<String, Object>) source.getClaims().get("realm_access");
-        if (realmAccess == null || realmAccess.isEmpty()) {
-            return new ArrayList<>();
+    @SuppressWarnings("unchecked")
+    public Collection<GrantedAuthority> convert(Jwt jwt) {
+        Collection<GrantedAuthority> authorities = new ArrayList<>();
+        Map<String, Object> realmAccess = (Map<String, Object>) jwt.getClaims().get("realm_access");
+        if (realmAccess != null && !realmAccess.isEmpty()) {
+            List<String> realmRoles = (List<String>) realmAccess.get("roles");
+            authorities.addAll(realmRoles.stream()
+                    .map(roleName -> "ROLE_" + roleName)
+                    .map(SimpleGrantedAuthority::new)
+                    .toList());
         }
-        return ((List<String>) realmAccess.get("roles"))
-                .stream().map(roleName -> "ROLE_" + roleName)
-                .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+        Map<String, Object> resourceAccess = (Map<String, Object>) jwt.getClaims().get("resource_access");
+        if (resourceAccess != null && resourceAccess.containsKey("my-budget-ac")) {
+            Map<String, Object> clientAccess = (Map<String, Object>) resourceAccess.get("my-budget-ac");
+            List<String> clientRoles = (List<String>) clientAccess.get("roles");
+            authorities.addAll(clientRoles.stream()
+                    .map(roleName -> "ROLE_" + roleName)
+                    .map(SimpleGrantedAuthority::new)
+                    .toList());
+        }
+        return authorities;
     }
 }
